--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.0",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
+    "react-card-flip": "^1.1.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-spring": "^9.2.4",
